--- a/gpt2_small_lang_model.ipynb
+++ b/gpt2_small_lang_model.ipynb
@@ -318,7 +318,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input_text = \"What are the best colors to use in winter?\"\n",
+        "input_text = \"What are the dimensions of a regulation soccer field?\"\n",
         "resposta = gerar_resposta(model, tokenizer, input_text)\n",
         "print(f\"{resposta}\")"
       ],
