--- a/gpt2_small_lang_model.ipynb
+++ b/gpt2_small_lang_model.ipynb
@@ -43,7 +43,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers[torch] datasets torch"
+        "!pip install pyarrow==14.0.2 requests==2.31.0 fsspec==2024.6.1 transformers[torch] datasets torch"
       ]
     },
     {
