--- a/phi-1_5-FineTunning.ipynb
+++ b/phi-1_5-FineTunning.ipynb
@@ -108,8 +108,8 @@
    "outputs": [],
    "source": [
     "# Salvar o modelo finamente ajustado\n",
-    "trainer.save_model('./seu_modelo_fino')\n",
-    "tokenizer.save_pretrained('./seu_modelo_fino')"
+    "trainer.save_model('./meu_modelo')\n",
+    "tokenizer.save_pretrained('./meu_modelo')"
    ]
   }
  ],
