--- a/phi-1_5-FineTunning.ipynb
+++ b/phi-1_5-FineTunning.ipynb
@@ -79,7 +79,7 @@
     "    save_steps=500,\n",
     "    save_total_limit=2,\n",
     "    fp16=True,\n",
-    "    evaluation_strategy='steps',\n",
+    "    eval_strategy='steps',\n",
     ")\n",
     "\n",
     "# Treinador\n",
