--- a/phi-1_5-FineTunning.ipynb
+++ b/phi-1_5-FineTunning.ipynb
@@ -56,6 +56,7 @@
    "source": [
     "# Tokenize os dados\n",
     "def tokenize_function(examples):\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
     "    return tokenizer(examples['prompt'], truncation=True,\n",
     "                     padding='max_length', max_length=512)\n",
     "\n",
